Create introduction and create four relative links
Used different headers to add different dimensions to the website and us
ed a simple premise to give user options. The links keep them in suspens
e and add to the interactiveness.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-
+        <h1>Welcome!</h1>
+        <h2> I'm pretty sure you came to this site looking for a good recipe, and I'm glad to inform you that you came to the right place!</h2>
+        <h2>So tell me... what are you feeling today:</h2>
+        <ol>
+            <li><a href="./sweet.html">Sweet</a></li>
+            <li><a href="./sour.html">Sour</a></li>
+            <li><a href="./salty.html">Salty</a></li>
+            <li><a href="./spicy.html">Spicy</a></li>
+        </ol>
     </body>
 </html>
