Add image and resize it
Used img, src, alt, height and width attributes to add a visually accepta
ble image

--- a/sweet.html
+++ b/sweet.html
@@ -6,6 +6,6 @@
     <title>Sweet</title>
 </head>
 <body>
-    Add image here
+    <img src="../../Downloads/img/sweetgirl.jpeg" alt="Image of a beautiful woman smiling cheerfully" height="1440" width="2560">
 </body>
 </html>
