Add images for the rest of the links
Changed the idea behind the website and completed version one of it

--- a/sour.html
+++ b/sour.html
@@ -6,6 +6,6 @@
     <title>Sour</title>
 </head>
 <body>
-    Add image here
+    <img src="../../Downloads/img/lemon.jpg" alt="Image of a yellow lemon" height="1440" width="2560">
 </body>
 </html>
