--- a/spicy.html
+++ b/spicy.html
@@ -6,6 +6,6 @@
     <title>Spicy</title>
 </head>
 <body>
-    Add image here
+    <img src="../../Downloads/img/chili.jpg" alt="Image of a red chili pepper" height="1440" width="2560">
 </body>
 </html>
