--- a/sweet.html
+++ b/sweet.html
@@ -6,6 +6,6 @@
     <title>Sweet</title>
 </head>
 <body>
-    <img src="../../Downloads/img/sweetgirl.jpeg" alt="Image of a beautiful woman smiling cheerfully" height="1440" width="2560">
+    <img src="../../Downloads/img/donut.jpg" alt="Image of a chocolate donut" height="1440" width="2560">
 </body>
 </html>
