--- a/salty.html
+++ b/salty.html
@@ -6,6 +6,6 @@
     <title>Salty</title>
 </head>
 <body>
-    Add image here
+    <img src="../../Downloads/img/fries.jpg" alt="Image of a box of french fries" height="1440" width="2560">
 </body>
 </html>
